--- a/package.json
+++ b/package.json
@@ -49,13 +49,13 @@
   ],
   "files": [
     "index.html",
-    "styles.css",
-    "app.js",
-    "config.js",
-    "content.js",
-    "README.md",
-    "README-zh.md",
-    "LICENSE",
+    "src/css/styles.css",
+    "src/js/app.js",
+    "src/js/config.js",
+    "src/js/content.js",
+    "docs/README.md",
+    "docs/README-zh.md",
+    "docs/LICENSE",
     ".gitignore"
   ]
 } 
